<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?colorPrimaryVariant"
        app:title="@string/activity_setting"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_brand"
            android:textSize="20sp"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_tj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tj"
                android:textSize="20sp"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_kumyoung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kumyoung"
                android:textSize="20sp"
                android:layout_marginStart="12dp"/>
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_reset_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_reset"
            android:textSize="20sp"
            android:layout_marginTop="35dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_export_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_export"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:visibility="invisible"/>

    </LinearLayout>
</LinearLayout>